// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`FsProjectManager.create scaffolds the expected file tree into a fresh directory 1`] = `
[
  ".gitignore",
  "agentcore/.env.local",
  "agentcore/agentcore.json",
  "agentcore/aws-targets.json",
  "agentcore/cdk/.gitignore",
  "agentcore/cdk/.npmignore",
  "agentcore/cdk/.prettierrc",
  "agentcore/cdk/README.md",
  "agentcore/cdk/bin/cdk.ts",
  "agentcore/cdk/cdk.json",
  "agentcore/cdk/jest.config.js",
  "agentcore/cdk/lib/cdk-stack.ts",
  "agentcore/cdk/package.json",
  "agentcore/cdk/test/cdk.test.ts",
  "agentcore/cdk/tsconfig.json",
  "app/agent_python_minimal/README.md",
  "app/agent_python_minimal/main.py",
  "app/agent_python_minimal/pyproject.toml",
]
`;

exports[`FsProjectManager.create snapshots the Strands project manifest and runtime spec 1`] = `
{
  "manifest": [
    ".gitignore",
    "agentcore/.env.local",
    "agentcore/agentcore.json",
    "agentcore/aws-targets.json",
    "agentcore/cdk/.gitignore",
    "agentcore/cdk/.npmignore",
    "agentcore/cdk/.prettierrc",
    "agentcore/cdk/README.md",
    "agentcore/cdk/bin/cdk.ts",
    "agentcore/cdk/cdk.json",
    "agentcore/cdk/jest.config.js",
    "agentcore/cdk/lib/cdk-stack.ts",
    "agentcore/cdk/package.json",
    "agentcore/cdk/test/cdk.test.ts",
    "agentcore/cdk/tsconfig.json",
    "app/agent_python_strands/.gitignore",
    "app/agent_python_strands/README.md",
    "app/agent_python_strands/main.py",
    "app/agent_python_strands/memory/__init__.py",
    "app/agent_python_strands/memory/session.py",
    "app/agent_python_strands/model/__init__.py",
    "app/agent_python_strands/model/load.py",
    "app/agent_python_strands/pyproject.toml",
  ],
  "memories": [
    {
      "eventExpiryDuration": 30,
      "name": "agent_python_strandsMemory",
      "strategies": [
        {
          "namespaceTemplates": [
            "/users/{actorId}/facts",
          ],
          "type": "SEMANTIC",
        },
        {
          "namespaceTemplates": [
            "/users/{actorId}/preferences",
          ],
          "type": "USER_PREFERENCE",
        },
        {
          "namespaceTemplates": [
            "/summaries/{actorId}/{sessionId}",
          ],
          "type": "SUMMARIZATION",
        },
        {
          "namespaceTemplates": [
            "/episodes/{actorId}/{sessionId}",
          ],
          "reflectionNamespaceTemplates": [
            "/episodes/{actorId}",
          ],
          "type": "EPISODIC",
        },
      ],
    },
  ],
  "runtimes": [
    {
      "build": "CodeZip",
      "codeLocation": "app/agent_python_strands",
      "entrypoint": "main.py",
      "name": "agent_python_strands",
      "protocol": "HTTP",
      "runtimeVersion": "PYTHON_3_14",
    },
  ],
}
`;

exports[`FsProjectManager.create snapshots the Strands TypeScript project manifest and runtime spec 1`] = `
{
  "manifest": [
    ".gitignore",
    "agentcore/.env.local",
    "agentcore/agentcore.json",
    "agentcore/aws-targets.json",
    "agentcore/cdk/.gitignore",
    "agentcore/cdk/.npmignore",
    "agentcore/cdk/.prettierrc",
    "agentcore/cdk/README.md",
    "agentcore/cdk/bin/cdk.ts",
    "agentcore/cdk/cdk.json",
    "agentcore/cdk/jest.config.js",
    "agentcore/cdk/lib/cdk-stack.ts",
    "agentcore/cdk/package.json",
    "agentcore/cdk/test/cdk.test.ts",
    "agentcore/cdk/tsconfig.json",
    "app/agent_typescript_strands/.gitignore",
    "app/agent_typescript_strands/README.md",
    "app/agent_typescript_strands/main.ts",
    "app/agent_typescript_strands/mcp_client/client.ts",
    "app/agent_typescript_strands/memory/memory.ts",
    "app/agent_typescript_strands/model/load.ts",
    "app/agent_typescript_strands/package.json",
    "app/agent_typescript_strands/tsconfig.json",
  ],
  "memories": [
    {
      "eventExpiryDuration": 30,
      "name": "agent_typescript_strandsMemory",
      "strategies": [
        {
          "namespaceTemplates": [
            "/users/{actorId}/facts",
          ],
          "type": "SEMANTIC",
        },
        {
          "namespaceTemplates": [
            "/users/{actorId}/preferences",
          ],
          "type": "USER_PREFERENCE",
        },
        {
          "namespaceTemplates": [
            "/summaries/{actorId}/{sessionId}",
          ],
          "type": "SUMMARIZATION",
        },
        {
          "namespaceTemplates": [
            "/episodes/{actorId}/{sessionId}",
          ],
          "reflectionNamespaceTemplates": [
            "/episodes/{actorId}",
          ],
          "type": "EPISODIC",
        },
      ],
    },
  ],
  "runtimes": [
    {
      "build": "CodeZip",
      "codeLocation": "app/agent_typescript_strands",
      "entrypoint": "main.js",
      "name": "agent_typescript_strands",
      "protocol": "HTTP",
      "runtimeVersion": "NODE_22",
    },
  ],
}
`;

exports[`FsProjectManager.create snapshots the Strands A2A project manifest and runtime spec 1`] = `
{
  "manifest": [
    ".gitignore",
    "agentcore/.env.local",
    "agentcore/agentcore.json",
    "agentcore/aws-targets.json",
    "agentcore/cdk/.gitignore",
    "agentcore/cdk/.npmignore",
    "agentcore/cdk/.prettierrc",
    "agentcore/cdk/README.md",
    "agentcore/cdk/bin/cdk.ts",
    "agentcore/cdk/cdk.json",
    "agentcore/cdk/jest.config.js",
    "agentcore/cdk/lib/cdk-stack.ts",
    "agentcore/cdk/package.json",
    "agentcore/cdk/test/cdk.test.ts",
    "agentcore/cdk/tsconfig.json",
    "app/a2a_python_strands/.gitignore",
    "app/a2a_python_strands/README.md",
    "app/a2a_python_strands/main.py",
    "app/a2a_python_strands/memory/__init__.py",
    "app/a2a_python_strands/memory/session.py",
    "app/a2a_python_strands/model/__init__.py",
    "app/a2a_python_strands/model/load.py",
    "app/a2a_python_strands/pyproject.toml",
  ],
  "memories": [
    {
      "eventExpiryDuration": 30,
      "name": "a2a_python_strandsMemory",
      "strategies": [
        {
          "namespaceTemplates": [
            "/users/{actorId}/facts",
          ],
          "type": "SEMANTIC",
        },
        {
          "namespaceTemplates": [
            "/users/{actorId}/preferences",
          ],
          "type": "USER_PREFERENCE",
        },
        {
          "namespaceTemplates": [
            "/summaries/{actorId}/{sessionId}",
          ],
          "type": "SUMMARIZATION",
        },
        {
          "namespaceTemplates": [
            "/episodes/{actorId}/{sessionId}",
          ],
          "reflectionNamespaceTemplates": [
            "/episodes/{actorId}",
          ],
          "type": "EPISODIC",
        },
      ],
    },
  ],
  "runtimes": [
    {
      "build": "CodeZip",
      "codeLocation": "app/a2a_python_strands",
      "entrypoint": "main.py",
      "name": "a2a_python_strands",
      "protocol": "A2A",
      "runtimeVersion": "PYTHON_3_14",
    },
  ],
}
`;

exports[`FsProjectManager.create snapshots the LangChain project manifest and runtime spec 1`] = `
{
  "manifest": [
    ".gitignore",
    "agentcore/.env.local",
    "agentcore/agentcore.json",
    "agentcore/aws-targets.json",
    "agentcore/cdk/.gitignore",
    "agentcore/cdk/.npmignore",
    "agentcore/cdk/.prettierrc",
    "agentcore/cdk/README.md",
    "agentcore/cdk/bin/cdk.ts",
    "agentcore/cdk/cdk.json",
    "agentcore/cdk/jest.config.js",
    "agentcore/cdk/lib/cdk-stack.ts",
    "agentcore/cdk/package.json",
    "agentcore/cdk/test/cdk.test.ts",
    "agentcore/cdk/tsconfig.json",
    "app/agent_python_langchain/.gitignore",
    "app/agent_python_langchain/README.md",
    "app/agent_python_langchain/main.py",
    "app/agent_python_langchain/model/__init__.py",
    "app/agent_python_langchain/model/load.py",
    "app/agent_python_langchain/pyproject.toml",
  ],
  "memories": undefined,
  "runtimes": [
    {
      "build": "CodeZip",
      "codeLocation": "app/agent_python_langchain",
      "entrypoint": "main.py",
      "name": "agent_python_langchain",
      "protocol": "HTTP",
      "runtimeVersion": "PYTHON_3_14",
    },
  ],
}
`;
